# cone.app

./: .gitignore  .travis.yml  BOOTSTRAP.rst  CHANGES.rst  DEV.rst  DEVELOPMENT.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  TODO.rst  TODO_BOOTSTRAP5.rst  base.cfg  bootstrap.sh  build_docs.sh  buildbot.cfg  buildout.cfg  buildout.sh  compile_styles.sh  cone.ini  cone.tac  dev.cfg  docs_requirements.txt  i18n.sh  i18n_extract.sh  include.mk  karma.conf.js  karma.es6.conf.js  karma.sh  mx.ini  package-lock.json  package.json  paste.cfg  paster.cfg  pyproject.toml  rollup.conf.js  rollup.sh  run_coverage.sh  run_tests.sh  setup.cfg  (+4 more)
.github/workflows/: docs.yml  test.yml
artwork/: favicon.ppm
buildout/: base.cfg  twisted.cfg  waitress.cfg
cone-bundle/: cone.bundle.js  cone.bundle.min.js
docs/archive/: __init__.rst  ajax.rst  login.rst  model.rst  workflow.rst
docs/archive/browser/: __init__.rst  authoring.rst  batch.rst  contents.rst  contextmenu.rst  form.rst  resources.rst  settings.rst  sharing.rst  utils.rst
docs/source/: addons.rst  ajax.rst  authoring.rst  conf.py  conf.py.in  config.rst  configuration.rst  development.rst  forms.rst  getting_started.rst  hooks.rst  index.rst  layout.rst  migration.rst  model.rst  plugins.rst  quickstart.rst  security.rst  setup.rst  start.rst  tiles.rst  translations.rst  ui.rst  widgets.rst  workflows.rst
docs/source/_static/: styles.css
docs/source/_templates/: layout.html
etc/: base.cfg  sphinx.cfg
examples/cone.example/: .gitignore  bootstrap.sh  buildout.cfg  example.ini  i18n.sh  lingua.cfg  setup.py
examples/cone.example/var/ugm/: roles  users
js/: karma.conf.js  rollup.conf.js  wtr.config.mjs
js/src/: batcheditems.js  bundle.js  colormode.js  cone.js  content.js  cookie_functions.js  copysupport.js  globals.js  globals.wip.js  header.js  keybinder.js  layout.js  livesearch.js  logo.js  main_menu_item.js  main_menu_sidebar.js  main_menu_top.js  mainarea.js  mainmenu.js  mobile_nav.js  mobilenav.js  navtree.js  personaltools.js  referencebrowser.js  scrollbar.js  searchbar.js  selectable.js  settingstabs.js  sharing.js  sidebar.js  sidebar_menu.bak.js  sidebar_menu.js  tabletoolbar.js  theme.js  theme_switcher.js  toggle_arrow.js  toolbar.js  topnav.js  translation.js  utils.js  (+3 more)
js/src/bundles/: protected.js  public.js
js/src/protected/: batcheditems.js  bundle.js  copysupport.js  keybinder.js  protected.bak.js  protected.js  referencebrowser.js  selectable.js  settingstabs.js  sharing.js  tabletoolbar.js
js/src/public/: bundle.js  cone.js  layout.js  mainmenu.js  mobilenav.js  searchbar.js  sidebar.js  theme.js  toolbar.js  topnav.js  utils.js  viewport.js
js/tests/: BAK_tst_public.js  cone.test.js  helpers.js  karma_viewport_states.js  manual_browser_test.js  test-helpers.js  test_batcheditems.js  test_cone.js  test_content.js  test_copysupport.js  test_globals.js  test_keybinder.js  test_livesearch.js  test_main_menu_item.js  test_main_menu_sidebar.js  test_main_menu_top.js  test_mobile_nav.js  test_navtree.js  test_personaltools.js  test_referencebrowser.js  test_scrollbar.js  test_searchbar.js  test_selectable.js  test_settingstabs.js  test_sharing.js  test_sidebar.js  test_sidebar_menu.js  test_sidebar_menu.test.js  test_tabletoolbar.js  test_theme.js  test_theme_switcher.js  test_toggle_arrow.js  test_toolbar.js  test_topnav.bak.js  test_topnav.js  test_topnav.test.js  test_utils.js  test_viewport.js
karma/coverage/HeadlessChrome 90.0.4430 (Linux 0.0.0)/: content.js.html  index.html  layout.js.html  test_viewport.js.html
karma/coverage/HeadlessChrome 90.0.4430 (Linux 0.0.0)/tests/: index.html  test_copysupport.js.html
scripts/: buildout.sh  clean.sh  coverage.sh  docs.sh  install_js.sh  install_py.sh  karma.sh  rollup.sh  test.sh
scss/: README.md  colors.scss  colorscheme.scss  content.scss  dark.scss  form.scss  header.scss  light.scss  login.scss  logo.scss  mainmenu.bak.scss  mainmenu.scss  mobile-menu.scss  scrollbar.scss  settings.scss  sidebar.scss  style.scss  style.scss.map  styles.scss  table.scss  toolbar-top.scss  topnav.scss
scss/bootstrap/: _variables.scss
src/cone/app/: __init__.py  __init__.rst  __init__.txt  authentication.py  authentication.txt  compat.py  configure.zcml  copysupport.py  copysupport.rst  interfaces.py  model.py  model.rst  model.txt  security.py  security.rst  security.txt  settings.py  testing.py  testing.txt  tests.py  tests.py_  ugm.py  utils.py  utils.rst  utils.txt  workflow.py  workflow.rst  workflow.txt
src/cone/app/browser/: __init__.py  __init__.rst  __init__.txt  actions.py  actions.rst  ajax.py  ajax.rst  ajax.txt  authentication.py  authoring.py  authoring.rst  authoring.txt  batch.py  batch.rst  batch.txt  content.py  contents.py  contents.rst  contents.txt  context.py  contextmenu.py  contextmenu.rst  copysupport.py  copysupport.rst  exception.py  exception.rst  form.py  form.rst  form.txt  layout.py  layout.rst  layout.txt  login.py  login.rst  login.txt  order.py  referencebrowser.py  referencebrowser.rst  referencebrowser.txt  resources.py  (+17 more)
src/cone/app/locale/: cone.app.pot  manual.pot
src/cone/app/testing/: __init__.py  __init__.rst  dummy_action.pt  dummy_batched_items.pt  dummy_main.pt  dummy_workflow.zcml  mock.py
src/cone/app/tests/: __init__.py  dummy_form.yaml  dummy_workflow.zcml  mock.py  test_app.py  test_browser.py  test_browser_actions.py  test_browser_ajax.py  test_browser_authoring.py  test_browser_batch.py  test_browser_content.py  test_browser_contents.py  test_browser_context.py  test_browser_contextmenu.py  test_browser_copysupport.py  test_browser_exception.py  test_browser_form.py  test_browser_layout.py  test_browser_login.py  test_browser_order.py  test_browser_referencebrowser.py  test_browser_resources.py  test_browser_search.py  test_browser_settings.py  test_browser_sharing.py  test_browser_table.py  test_browser_translation.py  test_browser_utils.py  test_browser_workflow.py  test_model.py  test_security.py  test_testing.py  test_ugm.py  test_utils.py  test_workflow.py
(+178 files in other folders)
