[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.app"
version = "1.1.0.dev0"
description = "Web application stub"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Chameleon",
    "cone.tile>1.99",
    "node.ext.ugm>1.99",
    "node>1.99",
    "pyramid>=1.5",
    "pyramid_chameleon",
    "pyramid_zcml",
    "repoze.workflow",
    "treibstoff>0.99",
    "webresource>1.2.99",
    "yafowil.bootstrap>1.99",
    "yafowil.webob>1.99",
    "yafowil>3.99",
]

[project.optional-dependencies]
lxml = [
    "lxml",
]
yaml = [
    "yafowil.yaml>2.99",
]
test = [
    "lxml",
    "pytest",
    "yafowil.yaml>2.99",
    "zope.pytestlayer",
]
docs = [
    "Sphinx",
    "sphinx_bootstrap_theme",
    "repoze.sphinx.autointerface",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.app"

[project.entry-points."paste.app_factory"]
main = "cone.app:main"

[project.entry-points."paste.filter_app_factory"]
remote_addr = "cone.app:make_remote_addr_middleware"

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/artwork",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
