[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.app"
version = "1.1.0.dev0"
description = "Web application stub"
dynamic = ["readme"]
requires-python = ">=3.10"
keywords = ["node", "pyramid", "cone", "web"]
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
license = {text = "Simplified BSD"}
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Chameleon",
    "cone.tile>1.99",
    "node.ext.ugm>1.99",
    "node>1.99",
    "pyramid>=2.0",
    "pyramid_chameleon",
    "pyramid_zcml",
    "repoze.workflow",
    "treibstoff>0.99,<2.0.0",
    "webresource>1.2.99",
    "yafowil.bootstrap>1.99",
    "yafowil.webob>1.99",
    "yafowil>3.99",
]

[project.optional-dependencies]
lxml = [
    "lxml",
]
yaml = [
    "yafowil.yaml>2.99",
]
test = [
    "lxml",
    "pytest",
    "yafowil.yaml>2.99",
    "zope.pytestlayer",
]
docs = [
    "Sphinx",
    "sphinx_bootstrap_theme",
    "repoze.sphinx.autointerface",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.app"

[project.entry-points."paste.app_factory"]
main = "cone.app:main"

[project.entry-points."paste.filter_app_factory"]
remote_addr = "cone.app:make_remote_addr_middleware"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/.gitignore",
    "/artwork",
    "/cone.ini",
    "/cone.tac",
    "/docs_requirements.txt",
    "/docs",
    "/examples",
    "/js/",
    "/Makefile",
    "/mx.ini",
    "/mxmake.yaml",
    "/package.json",
    "/pnpm-lock.yaml",
    "/scss/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
